--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ const R=["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TA
 const L=["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"];
 const ALL=[...R,...L];
 
-/* ---- PEIDETUD PRIORITEET ---- */
+/* ---- Funktsioon ---- */
 function h(n){
  let s=0;
  for(let i=0;i<n.length;i++) s+=n.charCodeAt(i)*(i+5);
