--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ const DAY=86400000;
 
 /* ---------------- NIMED ---------------- */
 const R=["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"];
-const L=["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"];
+const L=["ARU","SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"];
 const ALL=[...R,...L];
 
 /* ---- Funktsioon ---- */
