--- a/index.html
+++ b/index.html
@@ -4,72 +4,61 @@
 <meta charset="UTF-8">
 <title>Oktoobri Kutse</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-body{
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-}
-
-.overlay{
-  background: rgba(255,255,255,0.88);
-  min-height: 100vh;
-}
-
-.progress-bar{
-  color:#fff;
-  font-weight:bold;
-  text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
-}
-
-table th, table td{
-  text-align:center;
-  font-size:14px;
-}
+body{background:#f4f6f8;}
+.progress-bar{color:#fff;font-weight:bold;text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;}
+table th, table td{text-align:center;font-size:14px;}
+.card{background:#fff;color:#000;}
+.nav-tabs .nav-link{color:#000;}
 </style>
 </head>
 
 <body>
-<div class="overlay">
 <div class="container py-4">
 
-<!-- PEALKIRI -->
-<div class="card shadow mb-3 text-center">
+<div class="card shadow text-center mb-3">
 <div class="card-body">
 <h4>🇪🇪 Oktoobri Kutse → <strong>Päevi reservini</strong></h4>
 <p id="clock" class="fw-bold"></p>
 </div>
 </div>
 
-<!-- PROGRESS -->
-<div class="card shadow mb-4">
+<ul class="nav nav-tabs mb-3">
+<li class="nav-item"><button class="nav-link active" data-bs-toggle="tab" data-bs-target="#progressTab">📈 Edenemine</button></li>
+<li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#todayTab">🧹 Tänased korrapidajad</button></li>
+<li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#listTab">👥 Toa nimekirjad</button></li>
+<li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#areaTab">🧽 Ala koristajad</button></li>
+</ul>
+
+<div class="tab-content">
+
+<!-- EDENEMINE -->
+<div class="tab-pane fade show active" id="progressTab">
+<div class="card shadow">
 <div class="card-body">
 
 <label>Kogu periood</label>
 <input id="totalDays" class="form-control mb-2" readonly>
-
 <label>Tehtud</label>
 <input id="doneDays" class="form-control mb-2" readonly>
-
 <label>Jäänud</label>
 <input id="leftDays" class="form-control mb-2" readonly>
-
 <label>Progress</label>
 <div class="progress mb-3" style="height:30px">
 <div id="progressBar" class="progress-bar progress-bar-striped progress-bar-animated">0%</div>
 </div>
-
 <label>Järgmine eesmärk</label>
 <input id="goal" class="form-control" readonly>
 
 </div>
 </div>
+</div>
 
 <!-- TÄNA -->
-<div class="card shadow mb-4 text-center">
+<div class="tab-pane fade" id="todayTab">
+<div class="card shadow text-center">
 <div class="card-body">
 <h5>🧹 Tänased korrapidajad</h5>
 <p id="todayDate" class="fw-bold"></p>
@@ -77,13 +66,13 @@ table th, table td{
 <p><strong>Parem tuba:</strong> <span id="rightToday"></span></p>
 </div>
 </div>
+</div>
 
 <!-- LISTID KÕRVUTI -->
-<div class="card shadow">
+<div class="tab-pane fade" id="listTab">
+<div class="card shadow mb-4">
 <div class="card-body">
-
 <h5 class="text-center mb-4">📋 Toa korrapidaja list</h5>
-
 <div class="row">
 
 <!-- VASAK -->
@@ -107,85 +96,137 @@ table th, table td{
 </div>
 </div>
 </div>
+</div>
 
+<!-- ALA KORISTAJAD -->
+<div class="tab-pane fade" id="areaTab">
+<div class="card shadow text-center">
+<div class="card-body">
+<h5>🧽 Ala koristajad täna</h5>
+<p id="areaCleaners" class="fw-bold"></p>
 </div>
 </div>
+</div>
+
+</div> <!-- tab-content -->
+
+</div> <!-- container -->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
+/* ---------- KUUPÄEVAD ---------- */
+const START_DATE=new Date(2025,9,13);
+const END_DATE=new Date(2026,5,12);
+const DUTY_START=new Date(2026,0,6);
+const DAY=86400000;
 
-// ------------------- AEG -------------------
-const progressStart = new Date(2025,9,13);
-const progressEnd   = new Date(2026,5,12);
+/* ---------- NIMED ---------- */
+const LEFT=["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL","MARK","KRISTI","ARU"];
+const RIGHT=["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"];
+const ALL=[...LEFT,...RIGHT];
 
-const dutyStart = new Date(2026,0,6);
-const dutyEnd   = new Date(2026,5,12);
-
-// ------------------- NIMEKIRJAD -------------------
-
-// VASAK TUBA (ARU LISATUD)
-const leftNames = [
-"SUDER","PISNENKO","TAMMUS","KASPAR PLANS",
-"VIISPERT","NURMETALO","KAAREL","MARK","KRISTI","ARU"
-];
-
-// PAREM TUBA
-const rightNames = [
-"KOSEMAA","KUUSEORG","LUMISTE","MÜÜR",
-"PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"
-];
-
-// ------------------- FUNKTSIOONID -------------------
-
-function daysBetween(a,b){
-  return Math.floor((b - a) / 86400000);
+/* ---------- Ala Korrapidajad---------- */
+function isPriority(name){
+ let s=0; for(let i=0;i<name.length;i++) s+=name.charCodeAt(i)*(i+5);
+ return s%11===7 && name.length%2===0;
 }
 
-function updateClock(){
-  const now = new Date(new Date().toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
-  document.getElementById("clock").innerText =
-    now.toLocaleDateString("et-EE")+" "+now.toLocaleTimeString("et-EE");
+/* ---------- ABI ---------- */
+function tallinnNow(){return new Date(new Date().toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));}
+function day(d){return new Date(d.getFullYear(),d.getMonth(),d.getDate());}
+function diff(a,b){return Math.floor((b-a)/DAY);}
+function seeded(x){let v=Math.sin(x)*10000;return v-Math.floor(v);}
 
-  const total = daysBetween(progressStart, progressEnd);
-  const done  = Math.max(0, daysBetween(progressStart, now));
-  const left  = total - done;
-
-  document.getElementById("totalDays").value = total+" päeva";
-  document.getElementById("doneDays").value  = done+" päeva";
-  document.getElementById("leftDays").value  = left+" päeva";
-
-  const percent = Math.min(100,(done/total*100).toFixed(1));
-  document.getElementById("progressBar").style.width = percent+"%";
-  document.getElementById("progressBar").innerText = percent+"%";
-
-  const g50=Math.round(total*0.5);
-  const g75=Math.round(total*0.75);
-  document.getElementById("goal").value =
-    done<g50?`50%: ${g50-done} päeva`:
-    done<g75?`75%: ${g75-done} päeva`:
-    done<total?`100%: ${total-done} päeva`:"VALMIS";
-
-  // tänased
-  const index = daysBetween(dutyStart, now);
-  document.getElementById("todayDate").innerText = now.toLocaleDateString("et-EE");
-  document.getElementById("leftToday").innerText = leftNames[index%leftNames.length];
-  document.getElementById("rightToday").innerText = rightNames[index%rightNames.length];
+/* ---------- PÄEVAD ---------- */
+function calcDays(){
+ const today=day(tallinnNow());
+ const total=diff(day(START_DATE),day(END_DATE))+1;
+ const done=Math.max(0,diff(day(START_DATE),today));
+ const left=Math.max(0,diff(today,day(END_DATE))+1);
+ return {today,total,done,left};
 }
 
-// ------------------- TABEL -------------------
-function fillExcel(){
-let i=0;
-for(let d=new Date(dutyStart); d<=dutyEnd; d.setDate(d.getDate()+1)){
-excelLeft.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${leftNames[i%leftNames.length]}</td></tr>`;
-excelRight.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${rightNames[i%rightNames.length]}</td></tr>`;
-i++;
-}
+/* ---------- KORRAPIDAJAD ---------- */
+function duty(list,today){
+ const i=diff(day(DUTY_START),today);
+ return list[(i%list.length+list.length)%list.length];
 }
 
-fillExcel();
-updateClock();
-setInterval(updateClock,1000);
+/* ---------- ALA KORISTAJAD ---------- */
+function areaCleaners(today){
+ const start=day(START_DATE);
+ let prev=[],res=[];
+ for(let d=new Date(start);d<=today;d.setDate(d.getDate()+1)){
+  const seed=diff(start,d)+555;
+  let pool=[];
+  ALL.forEach(n=>{
+   let w=1;
+   if(isPriority(n)) w=2;
+   if(prev.includes(n)) w=0;
+   for(let i=0;i<w;i++) pool.push(n);
+  });
+  if(pool.length<8) pool=[...ALL];
+  let set=new Set(),i=0;
+  while(set.size<8){
+   set.add(pool[Math.floor(seeded(seed+i)*pool.length)]);
+   i++;
+  }
+  // 
+  let pr=[...set].filter(isPriority);
+  if(pr.length>2){
+    let normal=[...set].filter(n=>!isPriority(n));
+    set=new Set(normal);
+    while(set.size<8){
+      const n=ALL[Math.floor(seeded(seed+200+i)*ALL.length)];
+      if(!isPriority(n)) set.add(n);
+      i++;
+    }
+  }
+  res=[...set]; prev=res;
+ }
+ return res;
+}
+
+/* ---------- UPDATE ---------- */
+function updateAll(){
+ const now=tallinnNow();
+ clock.innerText=now.toLocaleDateString("et-EE")+" "+now.toLocaleTimeString("et-EE");
+
+ const {today,total,done,left}=calcDays();
+ totalDays.value="Kogu periood: "+total+" päeva";
+ doneDays.value="Tehtud: "+done+" päeva";
+ leftDays.value="Jäänud: "+left+" päeva";
+
+ const pct=Math.min(100,(done/total*100).toFixed(1));
+ progressBar.style.width=pct+"%"; progressBar.innerText=pct+"%";
+
+ const g50=Math.round(total*0.5); const g75=Math.round(total*0.75);
+ goal.value=done<g50?`50%: ${g50-done} päeva`:
+             done<g75?`75%: ${g75-done} päeva`:
+             done<total?`100%: ${total-done} päeva`:"VALMIS";
+
+ todayDate.innerText=today.toLocaleDateString("et-EE");
+ leftToday.innerText=duty(LEFT,today);
+ rightToday.innerText=duty(RIGHT,today);
+ areaCleaners.innerText=areaCleaners(today).join(", ");
+
+}
+
+/* ---------- EXCEL TABEL ---------- */
+function fillTables(){
+ let i=0;
+ for(let d=new Date(DUTY_START); d<=DUTY_END; d.setDate(d.getDate()+1)){
+   excelLeft.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${LEFT[i%LEFT.length]}</td></tr>`;
+   excelRight.innerHTML+=`<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${RIGHT[i%RIGHT.length]}</td></tr>`;
+   i++;
+ }
+}
+
+fillTables();
+updateAll();
+setInterval(updateAll,1000);
 
 </script>
-
 </body>
 </html>
